# ke_auto_profile_switcher

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/homebrew/: kaps.rb.tmpl
.github/workflows/: release.yml  tag-on-merge.yml
.serena/: project.yml
.serena/memories/: architecture_and_structure.md  code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/: cli.rs  constants.rs  error.rs  karabiner.rs  lib.rs  main.rs  usb_monitor.rs
src/config/: mod.rs  tests.rs
src/monitor/: bluetooth.rs  combined.rs  iokit.rs  mod.rs  usb.rs
