# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ke_auto_profile_switcher"
version = "0.2.0"
authors = ["HIRAKI Satoru <saruko313@gmail.com>"]
repository = "https://github.com/Layzie/ke_auto_profile_switcher"
description = "This CLI automatically switches Karabiner-Elements profiles with and without USB keyboard connection"
categories = ["command-line-utilities"]
keywords = ["cli", "karabiner-elements"]
license = "MIT"
readme = "README.md"
edition = "2024"

[[bin]]
name = "kaps"
path = "src/main.rs"

[dependencies]
usb_enumeration = "0.2.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
